<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SearchingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching"
            android:textSize="@dimen/dim40sp" />

        <EditText
            android:layout_width="@dimen/dim100dp"
            android:layout_height="@dimen/dim50dp"
            android:id="@+id/enter_number"
            android:hint="@string/enter_text"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/edittext_background"
            />
        <EditText
            android:layout_width="@dimen/dim100dp"
            android:layout_height="@dimen/dim50dp"
            android:id="@+id/enter_k"
            android:hint="@string/enter_text_k"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/edittext_background"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dim20dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim40dp"
                android:text="@string/add_text"
                android:layout_weight="1"
                android:id="@+id/add_numbers"
                android:layout_margin="@dimen/dim4dp"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim40dp"
                android:text="@string/search"
                android:layout_weight="1"
                android:id="@+id/search_number"
                android:layout_margin="@dimen/dim4dp"
                android:background="@drawable/edittext_background"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim40dp"
            android:textSize="@dimen/dim20sp"
            android:textAlignment="center"
            android:id="@+id/numbers"
            android:text="@string/no_number_added"
            />
    </LinearLayout>


</FrameLayout>