<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ArmstrongFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/armstrong"
            android:textSize="@dimen/dim40sp" />

        <EditText
            android:layout_width="@dimen/dim100dp"
            android:layout_height="@dimen/dim50dp"
            android:id="@+id/enter_number"
            android:hint="@string/enter_text"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/edittext_background"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim40dp"
            android:text="@string/check"
            android:id="@+id/find_armstrong"
            android:layout_margin="@dimen/dim4dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim40dp"
            android:textSize="@dimen/dim20sp"
            android:textAlignment="center"
            android:id="@+id/numbers"
            android:text="@string/no_number"
            />
    </LinearLayout>



</FrameLayout>